--- a/src/styles/crearNuevoPredio.module.css
+++ b/src/styles/crearNuevoPredio.module.css
@@ -15,6 +15,9 @@
   padding: 30px;
   border-radius: 8px;
   width: 100%;
+  border: 5px solid rgb(218, 223, 225); 
+  border-radius: 5%;
+  padding: 10px;
 }
 
 .form .ant-form-item {
@@ -26,3 +29,4 @@
   margin-left: auto;
   margin-right: auto;
 }
+
